<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_feed"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/navigation_watch"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/nav_watch" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/navigation_upload"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_upload" />
</menu>
